Component search specific country finished

--- a/src/app/all-countries/all-countries.component.html
+++ b/src/app/all-countries/all-countries.component.html
@@ -2,7 +2,7 @@
   *ngFor="let country of countries"
   class="grey darken-1 white-text">
   <mz-card-image>
-    <img src="{{ country.flag }}" />
+    <img src="{{ country.flag }}" alt="Country Flag" />
   </mz-card-image>
   <mz-card-image-title>
     {{ country.name }}
@@ -13,6 +13,7 @@
   <mz-card-content>
     <p> Initials-> {{ country.alpha2Code }}</p>
     <p> Region-> {{ country.region }}</p>
+    <p> Capital-> {{ country.capital }}</p>
     <p> Currency-> {{ country.currencies[0].name }}</p>
   </mz-card-content>
 </mz-card>
